loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:1: error: Missing closing brace `}' assumed here
if(!estSurBiscuit()){
^BaggleSeeker:1: error: Missing closing brace `}' assumed here
if(!estSurBiscuit()){
^BaggleSeeker:1: error: expected class or object definition
if(!estSurBiscuit()){
^