loopwhile.BaggleSeeker.scala.code
if(!estSurBiscuit()){
  avance()
	{else{
    prendbiscuit()
  }

